--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "globby": "^11.0.0",
+    "marked": "^0.8.2",
     "polka": "next",
     "sirv": "^0.4.0"
   },
