--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.1",
     "globby": "^11.0.0",
     "marked": "^0.8.2",
+    "moment": "^2.24.0",
     "polka": "next",
     "sirv": "^0.4.0"
   },
