--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "front-matter": "^3.1.0",
     "globby": "^11.0.0",
-    "marked": "^0.8.2",
     "moment": "^2.24.0",
     "polka": "next",
+    "remark": "^12.0.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
