--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "moment": "^2.24.0",
     "polka": "next",
     "remark": "^12.0.0",
-    "sirv": "^0.4.0"
+    "remark-parse": "^8.0.0",
+    "sirv": "^0.4.0",
+    "unified": "^9.0.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
